# phoebe-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
lab/: login.py  phoebe_ui.py  sessions.py  user.py
static/: styles.css
